# sfc

./: .gitignore  Cargo.toml  README.md
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
src/: dock.rs  event.rs  input_manager.rs  main.rs  output_handler.rs  output_manager.rs  seat.rs  seat_manager.rs  server.rs  shell.rs  space.rs  spring.rs  utils.rs  view.rs
src/renderer/: box_render.rs  cairo_tex.rs  home_bar.rs  mod.rs
src/status/: battery.rs  clock.rs  mod.rs
