[package]
name = "sfc"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com"]
edition = "2018"

[dependencies]
cairo-rs = "0.5"
cairo-sys-rs = "0.7"
cgmath = "0.16"
dbus = "0.6"
fern = "0.5"
lazy_static = "1.2"
log = "0.4"
gl = { path = "gl" }
time = "0.1"
wlroots = { git = "https://github.com/swaywm/wlroots-rs", rev = "3c25b54" }

[workspace]